<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.mathriddles.MainActivity">

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/Task1"
            android:textStyle="italic" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/first" />

        <EditText
            android:id="@+id/first_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_hint"
            android:inputType="number" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/second" />

        <EditText
            android:id="@+id/second_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_hint"
            android:inputType="number" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/third" />

        <EditText
            android:id="@+id/third_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_hint"
            android:inputType="number" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/fourth" />

        <EditText
            android:id="@+id/fourth_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_hint"
            android:inputType="number" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/fifth" />

        <EditText
            android:id="@+id/fifth_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_hint"
            android:inputType="number" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/Task2"
            android:textStyle="italic" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/sixth" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


                <RadioButton
                    android:id="@+id/sixth_monday"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />

                <RadioButton
                    android:id="@+id/sixth_saturday"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday" />
                <RadioButton
                    android:id="@+id/sixth_wednesday"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday" />

                <RadioButton
                    android:id="@+id/sixth_friday"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/friday" />



        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/seventh" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/seventh_monday"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />

                <RadioButton
                    android:id="@+id/seventh_tuesday"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <RadioButton
                    android:id="@+id/seventh_Thursday"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />

                <RadioButton
                    android:id="@+id/seventh_sunday"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />


        </RadioGroup>


        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/eighth" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/eighth_29"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty9km" />

                <RadioButton
                    android:id="@+id/eighth_20"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty" />

                <RadioButton
                    android:id="@+id/eighth_25"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty5" />

                <RadioButton
                    android:id="@+id/eighth_24"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty4" />



        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/ninth" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/ninth_58"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/fifty8" />

                <RadioButton
                    android:id="@+id/ninth_100"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/hundred" />

                <RadioButton
                    android:id="@+id/ninth_54"
                    style="@style/HeaderTextStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fifty4" />

                <RadioButton
                    android:id="@+id/ninth_46"
                    style="@style/HeaderTextStyle"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/forty6" />

        </RadioGroup>


        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/tenth" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/tenth_9"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/nineOverTwentyEight" />

                <RadioButton
                    android:id="@+id/tenth_2"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/twoOverThree" />

                <RadioButton
                    android:id="@+id/tenth_3"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/threeOverTwentyEight" />

                <RadioButton
                    android:id="@+id/tenth_314"
                    style="@style/HeaderTextStyle"
                    android:layout_width="@dimen/radio_button_width"
                    android:layout_height="wrap_content"
                    android:text="@string/threeOverFourteen" />


        </RadioGroup>

        <TextView
            android:text="@string/Task3"
            style="@style/HeaderTextStyle"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="italic"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/eleventh"/>

        <CheckBox
            android:id="@+id/nineThree"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/nineThree"
            />

        <CheckBox
            android:id="@+id/threeOne"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/threeOne"
            />

        <CheckBox
            android:id="@+id/sixOne"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/sixOne"
            />

        <CheckBox
            android:id="@+id/sixTwo"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/sixTwo"
            />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/twelfth"/>

        <CheckBox
            android:id="@+id/fifteenTen"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/fifteenTen"
            />

        <CheckBox
            android:id="@+id/sixteenTwelve"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/sixteenTwelve"
            />

        <CheckBox
            android:id="@+id/seventeenEleven"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/seventeenEleven"
            />

        <CheckBox
            android:id="@+id/fourteenFourteen"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/fourteenFourteen"
            />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/thirteenth"/>

        <CheckBox
            android:id="@+id/sevenSix"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/sevenSix"
            />

        <CheckBox
            android:id="@+id/sevenFive"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/sevenFive"
            />

        <CheckBox
            android:id="@+id/oneTwo"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/oneTwo"
            />

        <CheckBox
            android:id="@+id/oneThree"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/oneThree"
            />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_height="wrap_content"
            android:text="@string/fourteenth"/>

        <CheckBox
            android:id="@+id/elevenThirty"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/elevenThirty"
            />

        <CheckBox
            android:id="@+id/thirtyNinety"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/thirtyNinety"
            />

        <CheckBox
            android:id="@+id/tenTwenty"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/tenTwenty"
            />

        <CheckBox
            android:id="@+id/thirtyEighty"
            style="@style/HeaderTextStyle"
            android:layout_width="@dimen/radio_button_width"
            android:layout_height="wrap_content"
            android:text="@string/thirtyEighty"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="submitAnswers"
                android:text="@string/submit" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="resetAll"
                android:text="@string/reset" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>